# Raytrace

./: .gitignore  500px-16dip-1s.ppm  Raytrace.cabal  Readme.md  stack.yaml
app/: Main.hs
doc/html/Raytrace/: Predefined.html  Raytrace.haddock  Raytrace.txt  Raytracer.html  Rendering.html  SceneBuilder.html  Types.html  doc-index.html  index-frames.html  index.html  mini_Predefined.html  mini_Raytracer.html  mini_Rendering.html  mini_SceneBuilder.html  mini_Types.html
doc/html/Raytrace/src/: Predefined.html  Raytracer.html  Rendering.html  SceneBuilder.html  Types.html
src/: .swp  Predefined.hs  Raytracer.hs  Rendering.hs  SceneBuilder.hs  Types.hs
test/: IntegrationTest.hs  Test.hs
