name:                Raytrace
version:             0.1.0.0
synopsis:            Path traycer
description:         Please see README.md
homepage:            https://github.com/kd226/Raytrace#readme
license:             GPL-3
license-file:        LICENSE
author:              Konrad Dobroś
maintainer:          konrad.dobros@gmail.com
copyright:           2017 Konrad Dobroś
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Raytracer
                       SceneBuilder
                       Rendering
                       Types
                       Predefined
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , vect
                     , MonadRandom
                     , split
                     , parallel
                     , deepseq
                     , monad-par
  default-language:    Haskell2010

executable Raytrace-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , Raytrace
                     , vect
                     , mtl
                     , MonadRandom
  default-language:    Haskell2010

test-suite Raytrace-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , Raytrace
                     , HUnit
                     , vect
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Raytrace-test-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             IntegrationTest.hs
  build-depends:       base
                     , Raytrace
                     , vect
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  
source-repository head
  type:     git
  location: https://github.com/kd226/Raytrace
